Starting on localization, removed _Notes.txt, adds immunity component

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -243,7 +243,7 @@
     pierceArmor: true
   - type: Extractable
     grindableSolutionName: food
-  - type: Thorny
+  - type: DamageOnPickup
     sound: /Audio/Effects/lightburn.ogg
     damage:
       types:
