Added OnPickupDamageImmune component to botanists gloves

--- a/Resources/Prototypes/Entities/Clothing/Hands/gloves.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/gloves.yml
@@ -175,7 +175,7 @@
     fiberMaterial: fibers-leather
     fiberColor: fibers-brown
   - type: FingerprintMask
-  - type: ThornyImmune
+  - type: DamageOnPickupImmune
 
 - type: entity
   parent: ClothingHandsBase
