--- a/Resources/Prototypes/GameRules/events.yml
+++ b/Resources/Prototypes/GameRules/events.yml
@@ -133,6 +133,7 @@
       min: 1
       max: 1
       pickPlayer: false
+      roleType: MindRoleDragon
       mindComponents:
       - type: DragonRole
         prototype: Dragon
@@ -166,6 +167,7 @@
       min: 1
       max: 1
       pickPlayer: false
+      roleType: MindRoleNinja
       startingGear: SpaceNinjaGear
       roleLoadout:
       - RoleSurvivalEVA
