add fake suffix and flavor fix

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -1611,6 +1611,7 @@
   name: capfruit
   parent: FoodProduceBase
   id: FoodFakeCapfruit
+  suffix: Fake
   description: A soft but smooth gun-shaped fruit.
   components:
   - type: FlavorProfile
