--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
@@ -648,6 +648,7 @@
 - type: entity
   parent: RealCapfruitSeeds
   id: FakeCapfruitSeeds
+  suffix: Fake
   components:
     - type: Seed
       seedId: fakecapfruit
