--- a/Resources/Prototypes/GameRules/events.yml
+++ b/Resources/Prototypes/GameRules/events.yml
@@ -133,7 +133,7 @@
       min: 1
       max: 1
       pickPlayer: false
-      roleType: MindRoleDragon
+      role: RoleTypeDragon
       mindComponents:
       - type: DragonRole
         prototype: Dragon
@@ -167,7 +167,7 @@
       min: 1
       max: 1
       pickPlayer: false
-      roleType: MindRoleNinja
+      role: RoleTypeNinja
       startingGear: SpaceNinjaGear
       roleLoadout:
       - RoleSurvivalEVA
@@ -430,6 +430,7 @@
     - prefRoles: [ InitialInfected ]
       max: 3
       playerRatio: 10
+      role: RoleTypeInitialInfected
       blacklist:
         components:
         - ZombieImmune
@@ -468,6 +469,7 @@
     - spawnerPrototype: SpawnPointLoneNukeOperative
       min: 1
       max: 1
+      role: RoleTypeNukie
       pickPlayer: false
       startingGear: SyndicateLoneOperativeGearFull
       components:
@@ -504,6 +506,7 @@
       fallbackRoles: [ Traitor ]
       min: 1
       max: 2
+      role: RoleTypeTraitor
       playerRatio: 10
       blacklist:
         components:
