--- a/Resources/Prototypes/GameRules/roundstart.yml
+++ b/Resources/Prototypes/GameRules/roundstart.yml
@@ -73,7 +73,7 @@
   parent: BaseGameRule
   id: BaseNukeopsRule
   components:
-  - type: RandomMetadata #this generates the random operation name cuz it's cool. 
+  - type: RandomMetadata #this generates the random operation name cuz it's cool.
     nameSegments:
     - operationPrefix
     - operationSuffix
@@ -102,6 +102,7 @@
     - prefRoles: [ NukeopsCommander ]
       fallbackRoles: [ Nukeops, NukeopsMedic ]
       spawnerPrototype: SpawnPointNukeopsCommander
+      role: RoleTypeNukie
       startingGear: SyndicateCommanderGearFull
       roleLoadout:
       - RoleSurvivalSyndicate
@@ -121,6 +122,7 @@
       fallbackRoles: [ Nukeops, NukeopsCommander ]
       spawnerPrototype: SpawnPointNukeopsMedic
       startingGear: SyndicateOperativeMedicFull
+      role: RoleTypeNukie
       roleLoadout:
       - RoleSurvivalSyndicate
       components:
@@ -141,6 +143,7 @@
       max: 3
       playerRatio: 10
       startingGear: SyndicateOperativeGearFull
+      role: RoleTypeNukie
       roleLoadout:
       - RoleSurvivalSyndicate
       components:
@@ -177,6 +180,7 @@
   components:
   - type: GameRule
     minPlayers: 5
+    role: RoleTypeTraitor
     delay:
       min: 240
       max: 420
@@ -205,6 +209,7 @@
     - prefRoles: [ HeadRev ]
       max: 3
       playerRatio: 15
+      role: RoleTypeRevolutionary
       briefing:
         text: head-rev-role-greeting
         color: CornflowerBlue
@@ -244,6 +249,7 @@
     - prefRoles: [ InitialInfected ]
       max: 6
       playerRatio: 10
+      role: RoleTypeInitialInfected
       blacklist:
         components:
         - ZombieImmune
