--- a/Resources/Prototypes/Roles/Antags/dragon.yml
+++ b/Resources/Prototypes/Roles/Antags/dragon.yml
@@ -3,3 +3,8 @@
   name: roles-antag-dragon-name
   antagonist: true
   objective: roles-antag-dragon-objective
+
+- type: roleType
+  id: RoleTypeDragon
+  role: TeamAntagonist
+  details: role-type-dragon-details
