--- a/Resources/Prototypes/Roles/Antags/revolutionary.yml
+++ b/Resources/Prototypes/Roles/Antags/revolutionary.yml
@@ -14,6 +14,11 @@
   objective: roles-antag-rev-objective
   guides: [ Revolutionaries ]
 
+- type: roleType
+  id: RoleTypeRevolutionary
+  role: TeamAntagonist
+  details: role-type-revolutionary-details
+
 - type: startingGear
   id: HeadRevGear
   storage:
